# topmv3

./: .gitignore
admin-panel/: .gitignore  PLAN.md  index.html  package-lock.json  package.json  vite.config.ts
admin-panel-master/: .gitignore  README.md  deploy.sh  index.html
browser-bot/: .dockerignore  .gitignore  Dockerfile  Makefile  docker-compose.yml  logs.sh  schema.sql  start.sh  stop.sh
browser-bot 2/: .gitignore  docker-compose.yml
browser-bot 2/captcha-solver/: .env.save  Dockerfile  README.md  SETUP.txt  STEALTH_GUIDE.md  parser_example.py
browser-bot 2/docs/: DEPLOY.md
browser-bot 2/generator/: farmer.py  human.py  proxy_forwarder.py
browser-bot 2/yandex-bot/: Dockerfile  chrome_versions.py  main.py  run_test.py  scenario.py  solcap.py  (+3 more)
browser-bot-master/: CLAUDE.md  entrypoint.sh  requirements.txt  status.sh
browser-bot/captcha-solver/: .dockerignore  .gitignore  Dockerfile  INTEGRATION.md  docker-compose.yml  pyproject.toml
browser-bot/captcha-solver/captcha_solver/: __main__.py  browser.py  cli.py  config.py  solver.py  two_captcha.py
browser-bot/captcha-solver/captcha_solver/api/: rest.py
browser-bot/captcha-solver/captcha_solver/proto/: __init__.py  captcha_pb2.py  captcha_pb2_grpc.py
browser-bot/captcha-solver/proto/: captcha.proto
browser-bot/captcha-solver/scripts/: gen_proto.sh
browser-bot/captcha-solver/tests/: test_two_captcha.py
captcha_solver 2/: .env.example  STEALTH_GUIDE.md
top-machine-back/: .env  .gitignore  logs.txt
top-machine-back-master/: .env  .env.example  .gitignore  Makefile  docker-compose.yml
(+162 files in other folders)
