[project]
name = "captcha-solver"
version = "0.1.0"
description = "Yandex SmartCaptcha solver (click + coordinate) via 2Captcha, with REST and gRPC"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.11.0",
    "pydantic-settings>=2.5.0",
    "httpx>=0.27.0",
    "playwright>=1.50.0",
    "structlog>=24.0.0",
    "grpcio>=1.66.0",
    "grpcio-tools>=1.66.0",
    "protobuf>=5.28.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "asgi-lifespan>=2.1.0",
    "ruff>=0.8.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["captcha_solver*"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
